[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["MaxCouling <mcouling@stu.kerikerihigh.ac.nz>"]
description = ""
name = "budget-calculator-f"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.8"
tabulate = "^0.8.7"
[tool.poetry.dev-dependencies]
